2025/12/27/00:01第二次修改。修改了app.py里的user路由，使得可以注册用户。现在提交，因为准备修改其他文件以支撑注册功能

--- a/templates/users.html
+++ b/templates/users.html
@@ -378,6 +378,7 @@ function confirmDeleteUser(id, username, realname) {
 {% endblock %}
 
 
+{% raw %}
 <!--&lt;!&ndash;-->
 <!--  文件名: templates/users.html-->
 <!--  说明: 用户管理页面 - 完整代码（仅管理员可访问）-->
@@ -742,3 +743,4 @@ function confirmDeleteUser(id, username, realname) {
 <!--}-->
 <!--</script>-->
 <!--{% endblock %}-->
+{% endraw %}
