2025/12/27 10:16正在增加可以使得用户重复申请的功能，数据库的username要修改成非唯一，app.py要大改。备份

--- a/templates/register.html
+++ b/templates/register.html
@@ -100,7 +100,7 @@
                     </select>
                     <div class="form-text text-warning">
                         <i class="bi bi-exclamation-triangle"></i>
-                        管理员权限需管理员审核批准，请谨慎选择
+                        注意：申请管理员权限需管理员审核批准，管理员有权修改授予的权限级别
                     </div>
                 </div>
 
@@ -111,7 +111,8 @@
                         1. 注册申请需要管理员审批<br>
                         2. 审批通过后，系统会为您生成用户ID<br>
                         3. 审批结果将通过邮箱或系统通知告知<br>
-                        4. 请使用真实的个人信息，以便审核
+                        4. 请使用真实的个人信息，以便审核<br>
+                        5. 如申请被拒绝，您可以修改信息后再次提交申请
                     </div>
                 </div>
 
@@ -158,7 +159,7 @@
 
         // 如果申请管理员权限，提示确认
         if (permission === '管理员') {
-            return confirm('您正在申请管理员权限，这需要提供充分的理由并由管理员严格审核。确定要继续吗？');
+            return confirm('您正在申请管理员权限，这需要提供充分的理由并由管理员严格审核。管理员有权修改最终授予的权限级别。确定要继续吗？');
         }
 
         return true;
