--- a/templates/base.html
+++ b/templates/base.html
@@ -91,6 +91,14 @@
                             <i class="bi bi-person-gear"></i> 用户管理
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('user_requests') }}">
+                            <i class="bi bi-person-check"></i> 注册审批
+                            {% if pending_requests_count and pending_requests_count > 0 %}
+                            <span class="badge bg-danger">{{ pending_requests_count }}</span>
+                            {% endif %}
+                        </a>
+                    </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
@@ -99,7 +107,9 @@
                             <i class="bi bi-person-circle"></i> {{ session.realname }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">{{ session.permission }}</a></li>
+                            <li><a class="dropdown-item" href="#">
+                                <i class="bi bi-shield-check"></i> {{ session.permission }}
+                            </a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('logout') }}">
                                 <i class="bi bi-box-arrow-right"></i> 退出登录
