--- a/templates/buildings.html
+++ b/templates/buildings.html
@@ -23,14 +23,14 @@
         <h6 class="mb-0"><i class="bi bi-search"></i> 搜索公寓楼</h6>
     </div>
     <div class="card-body">
-        <form method="GET" action="{{ url_for('buildings') }}" class="row g-3">
-            <div class="col-md-8">
+        <form method="GET" action="{{ url_for('buildings') }}" class="row g-3 align-items-end">
+            <div class="col-md-9">
                 <input type="text" class="form-control" name="search"
                        placeholder="输入公寓楼号进行搜索..." value="{{ search }}"
                        autocomplete="off">
             </div>
-            <div class="col-md-4">
-                <div class="btn-group w-100" role="group">
+            <div class="col-md-3">
+                <div class="d-flex gap-2">
                     <button type="submit" class="btn btn-primary">
                         <i class="bi bi-search"></i> 搜索
                     </button>
