--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,6 +1,6 @@
 <!--
   文件名: templates/reports.html
-  说明: 统计报表页面 - 完整代码
+  说明: 统计报表页面 - 完整代码（修复对齐问题）
 -->
 {% extends "base.html" %}
 
@@ -23,7 +23,7 @@
                         <th width="20%">入住学生数</th>
                         <th width="20%">交费笔数</th>
                         <th width="20%">人均交费</th>
-                        <th width="20%">收费总额</th>
+                        <th width="20%" class="text-end">收费总额</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -81,7 +81,7 @@
                         <th width="15%">学生人数</th>
                         <th width="15%">交费笔数</th>
                         <th width="20%">人均交费</th>
-                        <th width="20%">收费总额</th>
+                        <th width="20%" class="text-end">收费总额</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -185,10 +185,10 @@
                         <th width="10%">姓名</th>
                         <th width="20%">专业班级</th>
                         <th width="12%">公寓-寝室</th>
-                        <th width="12%">应交费用</th>
-                        <th width="12%">已交费用</th>
-                        <th width="12%">欠费金额</th>
-                        <th width="12%">欠费状态</th>
+                        <th width="12%" class="text-end">应交费用</th>
+                        <th width="12%" class="text-end">已交费用</th>
+                        <th width="12%" class="text-end">欠费金额</th>
+                        <th width="12%" class="text-center">欠费状态</th>
                     </tr>
                 </thead>
                 <tbody>
