--- a/templates/students.html
+++ b/templates/students.html
@@ -21,14 +21,14 @@
         <h6 class="mb-0"><i class="bi bi-search"></i> 搜索学生</h6>
     </div>
     <div class="card-body">
-        <form method="GET" action="{{ url_for('students') }}" class="row g-3">
-            <div class="col-md-10">
+        <form method="GET" action="{{ url_for('students') }}" class="row g-3 align-items-end">
+            <div class="col-md-9">
                 <input type="text" class="form-control" name="search"
-                       placeholder="搜索学号、姓名、专业或班级..." value="{{ search }}"
+                       placeholder="搜索学号、姓名、民族、专业、班级或联系方式..." value="{{ search }}"
                        autocomplete="off">
             </div>
-            <div class="col-md-2">
-                <div class="btn-group w-100" role="group">
+            <div class="col-md-3">
+                <div class="d-flex gap-2">
                     <button type="submit" class="btn btn-primary">
                         <i class="bi bi-search"></i> 搜索
                     </button>
